--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,4 @@
-<h1> create a new article</h1>
-
-
+<h1> Edit the Article</h1>
 
 <%= form_for @article do |f| %>
 
@@ -24,7 +22,4 @@
 
 <p>
 <%= f.submit%>
-</p>
-<% end %>
-
-<%=link_to 'Back to article list', articles_path  %>
+<%end%>
