--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,6 @@
 <h1 style="color: red", align="center"> welcome to ruby on rails</h1>
 
-<%= link_to 'About', about_path %>
+<%= link_to 'Article', articles_path %>
 
 <html>
 <head>
@@ -10,6 +10,9 @@
 
 <h1 style="color: red", align="center">WELCOME TO THE BLOG</h1>
 <p style="color: red", align="center">THIS IS MY RUBY ON RAILS APP AND I AM VERY HAPPY TO CREAT IT</p>
+
+
+<%= link_to 'About', about_path %>
 
 </body>
 </html>
