--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,25 +1,3 @@
 <h1> Edit the Article</h1>
 
-<%= form_for @article do |f| %>
-
-<%if @article.errors.any? %>
-<h1> these errors </h1>
-<ul>
-<% @article.errors.full_messages.each do |msg|%>
-<li> <%= msg %> </li>
-<%end%>
-</ul>
-<%end%>
-<p>
-<%= f.label :title%><br/>
-<%= f.text_field :title%>
-</p>
-
-<p>
-<%= f.label :description %><br/>
-<%= f.text_area :description%>
-</p>
-
-<p>
-<%= f.submit%>
-<%end%>
+<%= render 'form' %>
