--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,30 +1,3 @@
 <h1> create a new article</h1>
 
-
-
-<%= form_for @article do |f| %>
-
-<%if @article.errors.any? %>
-<h1> these errors </h1>
-<ul>
-<% @article.errors.full_messages.each do |msg|%>
-<li> <%= msg %> </li>
-<%end%>
-</ul>
-<%end%>
-<p>
-<%= f.label :title%><br/>
-<%= f.text_field :title%>
-</p>
-
-<p>
-<%= f.label :description %><br/>
-<%= f.text_area :description%>
-</p>
-
-<p>
-<%= f.submit%>
-</p>
-<% end %>
-
-<%=link_to 'Back to article list', articles_path  %>
+<%= render 'form' %>
