--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,18 +1,26 @@
 <h1 style="color: red", align="center"> welcome to ruby on rails</h1>
 
-<%= link_to 'Article', articles_path %>
 
 <html>
 <head>
 <title>BLOG</title>
 </head>
 <body>
+<p>
+<div class="center jumbotron">
+  <h1 class="display-3">RUBY ON RAILS</h1>
+    <a class="btn btn-primary btn-lg btn-xlarge" href="#" role="button">Signup</a>
+  <p class="lead">
+  </p>
+</div>
+</p>
 
 <h1 style="color: red", align="center">WELCOME TO THE BLOG</h1>
 <p style="color: red", align="center">THIS IS MY RUBY ON RAILS APP AND I AM VERY HAPPY TO CREAT IT</p>
 
 
-<%= link_to 'About', about_path %>
+
+
 
 </body>
 </html>
