--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,3 @@
-<%= form_for @article do |f| %>
-
 <%if @article.errors.any? %>
 <h1> these errors </h1>
 <ul>
@@ -8,19 +6,40 @@
 <%end%>
 </ul>
 <%end%>
-<p>
-<%= f.label :title%><br/>
-<%= f.text_field :title%>
-</p>
 
-<p>
-<%= f.label :description %><br/>
-<%= f.text_area :description%>
-</p>
+<div class="row">
+<div class="col-xs-12">
+<%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
 
-<p>
-<%= f.submit%>
-</p>
-<% end %>
 
-<%=link_to 'Back to article list', articles_path  %>
+<div class="form-group">
+<div class="control-label col-sm-2">
+<%= f.label :title  %>
+</div>
+<div class="col-sm-10">
+<%= f.text_field :title, class: "form-control", placeholder: "Title of Article", autofocus: true%>
+</div>
+</div>
+
+<div class="form-group">
+<div class="control-label col-sm-2">
+<%= f.label :description  %>
+</div>
+<div class="col-sm-10">
+<%= f.text_area :description, rows: 12, class: "form-control", placeholder: "decription" %>
+</div>
+</div>
+
+<div class="form-group">
+<div class="col-sm-offset-2 col-sm-12">
+<%= f.submit class: 'btn btn-primary btn-lg' %>
+</div>
+</div>
+
+  <% end %>
+  </div>
+  </div>
+<div class="col-xs-4 col-xs-offset-6">
+[ <%=link_to "CENCEL BACK TO LIST", articles_path  %> ]
+
+</div>
