--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,24 @@
     <title>Blog</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
+
+  <%= render 'layouts/navbar' %>
+  
   <%= render 'layouts/masseges' %>
+
+
+  <div class="container">
+  
     <%= yield %>
+
+    </div>
+
+    <%= render 'layouts/footer' %>
   </body>
 </html>
