--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,6 +68,24 @@ height: 650px;
 	color: blue;
 }
 
+.description {
+
+	margin-top: 0px;
+}
+
+ .article-actions {
+
+border-top: 1px solid #eaeaea;
+margin-top: 5px;
+
+ }
+ .article-title{
+font-weight: bold;
+font-size: 1.3em;
+
+ }
+
+
 .footer {
 
 	margin-top: 40px;
