--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <footer class="footer">
 <small>
-	Copy Rigth &copy; <a href="https://www.w3schools.com/default.asp"> W3SCHOOL </a> by <a href="http://mahmadk2.herokuapp.com"> M Ahmad </a>
+	CopyRight&copy; <a href="https://www.w3schools.com/default.asp"> W3SCHOOL </a> by <a href="http://mahmadk2.herokuapp.com"> M Ahmad </a>
 
 </small>
 <nav>
