--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,11 +1,4 @@
-<%if @article.errors.any? %>
-<h1> these errors </h1>
-<ul>
-<% @article.errors.full_messages.each do |msg|%>
-<li> <%= msg %> </li>
-<%end%>
-</ul>
-<%end%>
+<%= render 'share/errors', obj: @article %>
 
 <div class="row">
 <div class="col-xs-12">
