--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,29 @@
-<h1> All Articles </h1>
-
-<%= link_to 'NEW Article', new_article_path %>
-
-<table>
-<tr>
-<th> Title </th>
-<th> Description </th>
-</tr>
-
-<tr>
+<h1 align="center"> All Articles </h1>
+<div class="col-xs-10 col-xs-offset-5">
+<%= link_to 'NEW Article', new_article_path, class: 'btn btn-xs btn-primary' %>
+</div>
 
 <% @articles.each do |f| %>
+<div class="row">
+<div class="col-xs-8 col-xs-offset-2">
+<div class="well wel-lg">
+<div class="article-title">
+<%= link_to f.title, article_path(f)%>
+</div>
+<div class="article-body">
 
-<td> <%= f.title %> </td>
-<td> <%= f.description %> </td>
-<td><%= link_to 'Edit', edit_article_path(f) %></td>
-<td><%= link_to 'Show', article_path(f) %></td>
-<td><%= link_to 'Delete', article_path(f), method: :delete, data: {confirm: "Are you sure?"} %></td>
- </tr>
+<%= truncate(f.description, length: 30) %>
+</div>
+<div class="article-actions">
+<%= link_to 'Edit', edit_article_path(f), class: "btn btn-xs btn-primary" %>
+<%= link_to 'Show', article_path(f), class: "btn btn-xs btn-info" %>
+<%= link_to 'Delete', article_path(f), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-xs btn-danger"%>
+ </div>
+ </div>
+ </div>
+ </div>
 
  <%end%>
 
- </table>
+
 
