--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,17 @@
-<h1> show in aticles </h1>
 
-<p>
 	
-	Title: <%= @article.title %>
-</p>
+<h2 align="center">	Title: <%= @article.title %> </h2>
 
-<p>
-	
-	Description:<%= @article.description %>
-</p>
 
-<%= link_to 'Back', articles_path %>
-<%= link_to 'Edit', edit_article_path %>
+<div class="well col-xs-10 col-xs-offset-1">
+<h2 align="center" class="center description">Description:</h2>
+	<hr>
+	<%= @article.description %>
+
+	<div class="article-actions">
+
+<%= link_to 'Back', articles_path, class: "btn btn-xs btn-primary" %>
+<%= link_to 'Edit', edit_article_path, class: "btn btn-xs btn-success" %>
+<%= link_to 'Delete', article_path, method: :delete, data: {confirm: "are you sure"}, class: "btn btn-xs btn-danger" %>
+</div>
+</div>
