--- a/app/views/layouts/_masseges.html.erb
+++ b/app/views/layouts/_masseges.html.erb
@@ -1,6 +1,12 @@
+<div class="row">
+<div class="col-xs-10 col-xs-offset-1">
+
 <% flash.each do|name, msg|%>
+<div class="alert alert-<%= "#{name}"%>" >
+<a href="#" class="close">&#215;</a>
 <ul>
-<li> <%= msg %> </li>
+<%= msg %>
 </ul>
+</div>
 <% end %>
 
