--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -33,6 +33,6 @@
   </div>
   </div>
 <div class="col-xs-4 col-xs-offset-6">
-[ <%=link_to "CENCEL BACK TO LIST", articles_path  %> ]
+[ <%=link_to "CENCEL BACK TO LIST", articles_path, class: 'btn btn-xs btn-info btn-lg'  %> ]
 
 </div>
