--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center"> All Articles </h1>
+<h1 align="center", style="color: green"> All Articles </h1>
 <div class="col-xs-10 col-xs-offset-5">
 <%= link_to 'NEW Article', new_article_path, class: 'btn btn-xs btn-primary' %>
 </div>
