--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,3 @@
-<h1 align="center"> create a new article</h1>
+<h1 align="center", style="color: blue"> Create a new article</h1>
 
 <%= render 'form' %>
