--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,10 @@
 
 	
-<h2 align="center">	Title: <%= @article.title %> </h2>
+<h2 align="center" style="color: red">	Title: <%= @article.title %> </h2>
 
 
 <div class="well col-xs-10 col-xs-offset-1">
-<h2 align="center" class="center description">Description:</h2>
+<h2 align="center" style="color: blue" class="center description">Description:</h2>
 	<hr>
 	<%= @article.description %>
 
