--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
-<h1 style="color: red", align="center"> welcome to ruby on rails</h1>
+<h1 style="color: red", align="center"> Welcome To Ruby On Rails</h1>
 
 
 <html>
@@ -8,14 +8,14 @@
 <body>
 <p>
 <div class="center jumbotron">
-  <h1 class="display-3">RUBY ON RAILS</h1>
-    <a class="btn btn-primary btn-lg btn-xlarge" href="#" role="button">Signup</a>
+  <h1 class="display-3"></h1>
+    <a style="background-color: black" class="btn btn-lg btn-xlarge" href="#" role="button">Signup</a>
   <p class="lead">
   </p>
 </div>
 </p>
 
-<h1 style="color: red", align="center">WELCOME TO THE BLOG</h1>
+<h1 align="center"><%= link_to "WELCOME TO THE BLOG", articles_path, class: "btn btn-danger btn-lg btn-xlarge"%></h1>
 <p style="color: red", align="center">THIS IS MY RUBY ON RAILS APP AND I AM VERY HAPPY TO CREAT IT</p>
 
 
