--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
 <nav>
 <ul> 
  <li>
-  <%= link_to 'About', about_path %>
+  <%= link_to 'ABOUT', about_path, class: "btn btn-success"%>
 
  </li>
 </ul>
