--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,5 +1,5 @@
 <h1 style="color: red", align="center">THIS IS ABOUT PAGE </h1>
-<%= link_to 'Home', root_path %>
+<%= link_to 'Home', root_path, class: "btn btn-primary" %>
 <html>
 <body>
 
