--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -84,6 +84,17 @@ font-weight: bold;
 font-size: 1.3em;
 
  }
+
+.article-detail {
+
+  border-top: 1px solid #eaeaea;
+	margin-top: 15px;
+
+}
+
+
+
+
 .test{
 	color: red;
 	font-weight: bold;
