--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,6 +14,11 @@
 
 <%= truncate(f.description, length: 30) %>
 </div>
+<div class="article-detail">
+<small> Created by : <%= f.user.username if f.user %>, 
+<%= time_ago_in_words(f.created_at) %> ago, 
+last update: <%= time_ago_in_words(f.updated_at) %> ago </small>
+</div>
 <div class="article-actions">
 <%= link_to 'Edit', edit_article_path(f), class: "btn btn-xs btn-primary" %>
 <%= link_to 'Show', article_path(f), class: "btn btn-xs btn-info" %>
