--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,8 +19,9 @@
       
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li> <%= link_to 'SignUp', 'users/new', class: "glyphicon glyphicon-user" %></li>
+      <li> <%= link_to 'Login', '#', class: "glyphicon glyphicon-log-in" %></li>
+
     </ul>
   </div>
 </nav>
