--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,8 +19,8 @@
       
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li> <%= link_to 'SignUp', 'users/new', class: "glyphicon glyphicon-user" %></li>
-      <li> <%= link_to 'Login', '#', class: "glyphicon glyphicon-log-in" %></li>
+      <li> <%= link_to '-SignUp', new_user_path, class: "glyphicon glyphicon-user" %></li>
+      <li> <%= link_to '-Login', '#', class: "glyphicon glyphicon-log-in" %></li>
 
     </ul>
   </div>
