--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -8,9 +8,11 @@
 <body>
 <p>
 <div class="center jumbotron">
-  <h1 class="display-3"></h1>
-    <a style="background-color: black" class="btn btn-lg btn-xlarge" href="#" role="button">Signup</a>
+  <h1 class="display-3">
+    <%= link_to 'SignUp', 'users/new', class: "btn btn-danger btn-lg btn-xlarge" %>
+  </h1>
   <p class="lead">
+
   </p>
 </div>
 </p>
