--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,6 +68,12 @@ height: 650px;
 	color: black;
 }
 
+.listing {
+list-style: none;
+align-items: center;
+
+}
+
 .description {
 
 	margin-top: 0px;
@@ -91,6 +97,7 @@ font-size: 1.3em;
 	margin-top: 15px;
 
 }
+
 
 
 
