--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,25 @@
 
 
 <div class="well col-xs-10 col-xs-offset-1">
+<div class="row">
+<div class="col-xs-8 col-xs-offset-2">
+<div class="well wel-lg">
+ <div align="center">
+<%= link_to gravatar_for(@article.user), user_path(@article.user)%>
+<div class="article-title">
+<%= link_to @article.user.username, user_path(@article.user)%>
+</div>
+<div class="article-body">
+<ul class="listing">
+
+<li><small><%= pluralize(@article.user.articles.count, "article")%></small></li>
+</ul>
+</div>
+
+</div>
+</div>
+</div>
+</div>
 <h2 align="center" style="color: blue" class="center description">Description:</h2>
 	<hr>
 	<%= @article.description %>
