--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,9 +4,10 @@
 
 
 <div class="well col-xs-10 col-xs-offset-1">
+<%if @article.user%>
 <div class="row">
-<div class="col-xs-8 col-xs-offset-2">
-<div class="well wel-lg">
+<div class=" col-xs-10 col-xs-offset-1">
+<div class=" well-lg">
  <div align="center">
 <%= link_to gravatar_for(@article.user), user_path(@article.user)%>
 <div class="article-title">
@@ -17,11 +18,15 @@
 
 <li><small><%= pluralize(@article.user.articles.count, "article")%></small></li>
 </ul>
+
 </div>
 
 </div>
+
 </div>
+<%end%>
 </div>
+
 </div>
 <h2 align="center" style="color: blue" class="center description">Description:</h2>
 	<hr>
