--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,9 @@
 <h1 align="center", style="color: green"> All Articles </h1>
-
+<div align="center">
+<%= will_paginate%>
+</div>
 <%= render 'article', obj: @articles%>
 
-
+<div align="center">
+<%= will_paginate%>
+</div>
