--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,6 +63,13 @@ background-size: cover;
 height: 650px;
 }
 
+.w3-display-container{
+
+	background-image: asset-url('cv.jpg'); 
+	background-size: cover;
+ height: 320px;
+}
+
 .display-3:hover {
 
 	color: black;
