--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,10 +19,28 @@
       
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li> <%= link_to 'SignUp', signup_path, class: "glyphicon glyphicon-user" %></li>
+      
       <%if logged_in? %>
-      <li> <%= link_to 'Logout', logout_path, method: :delete, class: "glyphicon glyphicon-log-in" %></li>
+       <ul class="nav navbar-nav">
+    
+     
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Setting <span class="caret"></span></a>
+
+
+        <ul class="dropdown-menu">
+        <li> <%= link_to "Profile", user_path(current_user) %> </li>
+          <li><a href="#">Page 1-2</a></li>
+
+        </ul>
+      </li>
+      
+    </ul>
+
+
+      <li> <%= link_to 'Logout', logout_path, method: :delete, class: "glyphicon glyphicon-log-out" %></li>
+
       <% else %>
+             <li> <%= link_to 'SignUp', signup_path, class: "glyphicon glyphicon-user" %></li>
             <li> <%= link_to 'Login', login_path, class: "glyphicon glyphicon-log-in" %></li>
   
 
