--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,4 @@
-
+<div>
 <h1 style="color: red", align="center">THIS IS ABOUT PAGE </h1>
 
 
@@ -154,4 +154,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 </body>
 </html>
+
+</div>
 
