--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -35,7 +35,10 @@
 	<div class="article-actions">
 
 <%= link_to 'Back', articles_path, class: "btn btn-xs btn-primary" %>
+<%if logged_in? && current_user == @article.user%>
 <%= link_to 'Edit', edit_article_path, class: "btn btn-xs btn-success" %>
+
 <%= link_to 'Delete', article_path, method: :delete, data: {confirm: "are you sure"}, class: "btn btn-xs btn-danger" %>
+<%end%>
 </div>
 </div>
