--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,7 +6,8 @@
     <ul class="nav navbar-nav">
     
      <li><%= link_to "Articles", articles_path%></li>
-     <li> <%= link_to "Article", "#" %></li>
+     <li> <%= link_to "Users", users_path %></li>
+     <%if logged_in?%>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Write <span class="caret"></span></a>
 
 
@@ -16,7 +17,7 @@
 
         </ul>
       </li>
-      
+      <%end%>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       
@@ -29,13 +30,12 @@
 
         <ul class="dropdown-menu">
         <li> <%= link_to "Profile", user_path(current_user) %> </li>
-          <li><a href="#">Page 1-2</a></li>
+          <li><%= link_to 'Edit Profile', edit_user_path(current_user) %> </li>
 
         </ul>
       </li>
       
     </ul>
-
 
       <li> <%= link_to 'Logout', logout_path, method: :delete, class: "glyphicon glyphicon-log-out" %></li>
 
@@ -43,7 +43,7 @@
              <li> <%= link_to 'SignUp', signup_path, class: "glyphicon glyphicon-user" %></li>
             <li> <%= link_to 'Login', login_path, class: "glyphicon glyphicon-log-in" %></li>
   
-
+        
        <%end%>  
 
     </ul>
