admin function add

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,12 +18,12 @@
 <%= time_ago_in_words(f.created_at) %> ago, 
 last update: <%= time_ago_in_words(f.updated_at) %> ago </small>
 </div>
-<%if logged_in? && current_user == f.user%>
-<div class="article-actions">
-<%= link_to 'Edit', edit_article_path(f), class: "btn btn-xs btn-primary" %>
-<%= link_to 'Show', article_path(f), class: "btn btn-xs btn-info" %>
-<%= link_to 'Delete', article_path(f), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-xs btn-danger"%>
- </div>
+		<%if logged_in? && (current_user == f.user || current_user.admin?) %>
+			<div class="article-actions">
+			<%= link_to 'Edit', edit_article_path(f), class: "btn btn-xs btn-primary" %>
+			<%= link_to 'Show', article_path(f), class: "btn btn-xs btn-info" %>
+			<%= link_to 'Delete', article_path(f), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-xs btn-danger"%>
+			 </div>
  <%end%>
  </div>
  </div>
