--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@
        <ul class="nav navbar-nav">
     
      
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Setting <span class="caret"></span></a>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Setting <%= "Admin" if current_user.admin? %><span class="caret"></span></a>
 
 
         <ul class="dropdown-menu">
