--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
 
 <li><small><%= pluralize(user.articles.count, "article")%></small></li>
 </ul>
-<%if logged_in? %>
+<% if logged_in? and current_user.admin? %>
 <div class="article-actions">
 <%= link_to 'Edit', edit_user_path(user), class: "btn btn-xs btn-primary" %>
 <%= link_to 'Show', user_path(user), class: "btn btn-xs btn-info" %>
