--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -95,7 +95,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Web Developer </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2016 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>backend deleoper in ruby on rails and others open source language and CMS </p>
+          <p>backend developer in ruby on rails and others open source language and CMS </p>
           <hr>
         </div>
         <div class="w3-container">
