--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
   </head>
-
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <body>
 
   <%= render 'layouts/navbar' %>
